--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon-48.png" />
+    <link rel="icon" type="image/svg+xml" href="/icons8-money-32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4aed64611e.js" crossorigin="anonymous"></script>
